[package]
name = "qemubox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
colored = "2.0.0"
dirs = "5.0.1"
serde = { version = "1.0.163", features = ["derive"] }
toml = "0.7.4"
